Replace Elasticsearch distribution with OpenSearch distribution (#59)
* Move to opensearch distribution

Signed-off-by: Ian Hoang <hoangia@amazon.com>

* renamed elasticsearch.yml files

Signed-off-by: Ian Hoang <hoangia@amazon.com>

* Fixing launcher elasticsearch references

Signed-off-by: Ian Hoang <hoangia@amazon.com>

* debug statements

Signed-off-by: Ian Hoang <hoangia@amazon.com>

* Update configs, jvm.options, log4j2, and env variables to match OpenSearch distributions

Signed-off-by: Ian Hoang <hoangia@amazon.com>

* Reset main provision config bundled to true

Signed-off-by: Ian Hoang <hoangia@amazon.com>

* Fix links in config.ini and adjust os_name parameters for java_resolver

Signed-off-by: Ian Hoang <hoangia@amazon.com>

* Refixed java resolver test

Signed-off-by: Ian Hoang <hoangia@amazon.com>

* Refactored java_resolver

Signed-off-by: Ian Hoang <hoangia@amazon.com>

* Spelling fixes

Signed-off-by: Ian Hoang <hoangia@amazon.com>

* Removed logging statements and fixed pylint issues

Signed-off-by: Ian Hoang <hoangia@amazon.com>

* Pylint newline error fix

Signed-off-by: Ian Hoang <hoangia@amazon.com>

* Pylint fix retry

Signed-off-by: Ian Hoang <hoangia@amazon.com>

* Testing new line in link

Signed-off-by: Ian Hoang <hoangia@amazon.com>

* Try url fixes

Signed-off-by: Ian Hoang <hoangia@amazon.com>

* Fix unittest failures

Signed-off-by: Ian Hoang <hoangia@amazon.com>

* Fix pylint

Signed-off-by: Ian Hoang <hoangia@amazon.com>

* Pylint unit tests fix

Signed-off-by: Ian Hoang <hoangia@amazon.com>

* Refactor supplier.py and tests/supplier_test.py to remove elasticsearch references

Signed-off-by: Ian Hoang <hoangia@amazon.com>

* Fixed line length on pylint for supplier_test.py

Signed-off-by: Ian Hoang <hoangia@amazon.com>

* Adding logging statements for MacOS issue and removing commented out KPI method

Signed-off-by: Ian Hoang <hoangia@amazon.com>

* P